Fixed layout bugs

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -188,6 +188,7 @@ h2 {
   }
 }
 
+
 .event {
   color: white;
   min-width: 30rem;
@@ -520,8 +521,14 @@ aside {
   align-items: center;
   flex-direction: column;
   height: 40rem;
-  padding: 7rem;
   width: 100%;
+}
+
+.title {
+  width: 100%;
+  height: 80%;
+  display: flex;
+  align-items: center;
 }
 
 .detail_header_all {
@@ -534,11 +541,6 @@ aside {
   position: relative;
   height: 45rem;
   width: 100%;
-}
-
-.title {
-  display: flex;
-  align-self: flex-end;
 }
 
 .detail_banner {
@@ -719,6 +721,10 @@ aside {
 
 @media only screen and (max-width: 960px) {
 
+  .title {
+    justify-content: center;
+  }
+
   .container {
     margin: 0 5%;
   }
@@ -726,14 +732,15 @@ aside {
   .watisdeweek {
     margin-top: 6rem;
     margin-bottom: 6rem;
+  }
 
-    & img {
-      width: 50%;
-    }
+  .picturecontainerHome img, .picturecontainerHome source {
+    width: 100%;
   }
 
   .flextext {
-    width: 100%;
+    width: 77%;
+    margin-left: 5rem;
   }
 
   .hero .container {
@@ -793,6 +800,7 @@ aside {
 
   .flextext {
     width: 100%;
+    margin-left: 0;
   }
 
   .news {
